@@ -2,6 +2,7 @@ Unreleased
 
 Changed
     Image shown as part of instance details instead of title
+    Allow setting memory limit when creating a VM (#330)
 
 0.11.0 - 29/12/2020 (Happy 2 year birthday LXDMosaic)
 
